src/assets/css/home/hero.css
.hero-container {
    flex: 0 0 100%;
    max-width: 100%;
    background-color: #ECF0F1;
    height: 170%;
    display: flex;
    flex-wrap: wrap;
}

.circle-blue {
    width: 750px;
    height: 750px;
    background-color: #7292b2;
    border-radius: 50%;
    filter: blur(170px);
    z-index: 20;
    position: absolute;
    left: 50%;
    transform: translateX(0%);
    top: 15%;
}

.circle-yellow {
    width: 750px;
    height: 750px;
    background-color: #F39C12;
    border-radius: 50%;
    filter: blur(220px);
    z-index: 10;
    position: absolute;
    left: 50%;
    transform: translateX(-30%);
    top: 70%;
}


.hero-img {
    position: absolute;
    left: 23%;
    top: 100%;
    transform: translate(-50%, -50%);
    height: 160%;
    width: auto;
    z-index: 300;
}

.hero-header {
    color: #F39C12;
    position: absolute;
    font-size: 120px;
    right: 13%;
    left: 42%;
    top: 43%;
    z-index: 400;
}

.hero-description {
    color: #ffff;
    position: absolute;
    font-size: 40px;
    right: 9%;
    left: 39%;
    top: 115%;
    z-index: 400;
    text-align: center;

}

.btn {
    height: 80px;
    width: 230px;
    border: 3px solid;
    border-color: #F39C12;
    background-color: #2C3E50;
    color: #F39C12;
    font-size: 30px;
    border-radius: 25px;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    margin: 0 auto;
    z-index: 400;
    position: absolute;
    right: 27%;
    top: 142%;
    transition: all 0.3s ease-in-out;
}

.btn:hover {
    border-color: #2C3E50;
    background-color: #F39C12;
    color: #2C3E50;
}

.link-deco-hero {
    text-decoration: none;
    color: #F39C12;
}

.link-deco-hero:hover {
    color: #2C3E50;
}

@media (max-width: 768px) {
    .hero-container {
        flex: 0 0 100%;
        max-width: 100%;
        background-color: #ECF0F1;
        height: 120%;
        display: flex;
        flex-wrap: wrap;
    }

    .circle-blue {
        display: none;
        height: 0;
        width: 0;
    }

    .circle-yellow {
        display: none;
        height: 0;
        width: 0;
    }

    .hero-img {
        position: absolute;
        top: 83%;
        left: 57%;
        transform: translate(-50%, -50%);
        height: 120%;
        max-width: 100%;
        overflow: hidden;
    }


    .hero-header {
        color: #F39C12;
        position: absolute;
        font-size: 50px;
        z-index: 400;
        left: 6%;
        top: 48%;
        width: 80%;
    }

    .hero-description {
        position: absolute;
        font-size: 20px;
        width: 90%;
        left: 7%;
        top: 75%;
        z-index: 400;
        color: #2C3E50;
        font-weight: bold;
        text-align: center;
        text-shadow: 1px 2px 2px #ECF0F1;
    }

    .btn {
        height: 65px;
        width: 140px;
        font-size: 20px;
        border-radius: 15px;
        right: 32%;
        top: 88%;
        transition: all 0.3s ease-in-out;
    }

}

